--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1485,7 +1485,7 @@
     if (지역별정보윈도우[0].getMap()) {
       지역별정보윈도우[0].close();
     } else {
-      지역별정보윈도우[0].open(koreamap, markers[0]);
+      지역별정보윈도우[0].open(koreamap, 지역별마커[0]);
     }
   });
 
@@ -1493,7 +1493,7 @@
     if (지역별정보윈도우[1].getMap()) {
       지역별정보윈도우[1].close();
     } else {
-      지역별정보윈도우[1].open(koreamap, markers[1]);
+      지역별정보윈도우[1].open(koreamap, 지역별마커[1]);
     }
   });
 
@@ -1501,7 +1501,7 @@
     if (지역별정보윈도우[2].getMap()) {
       지역별정보윈도우[2].close();
     } else {
-      지역별정보윈도우[2].open(koreamap, markers[2]);
+      지역별정보윈도우[2].open(koreamap, 지역별마커[2]);
     }
   });
 
@@ -1509,7 +1509,7 @@
     if (지역별정보윈도우[3].getMap()) {
       지역별정보윈도우[3].close();
     } else {
-      지역별정보윈도우[3].open(koreamap, markers[2]);
+      지역별정보윈도우[3].open(koreamap, 지역별마커[2]);
     }
   });
 
