--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1465,13 +1465,13 @@
       });
       var infowindow = new naver.maps.InfoWindow({
           content: contentString,
-          maxWidth: 140,
-          backgroundColor: "#ffffff",
-          borderColor: "#000",
-          borderWidth: 1,
-          anchorSize: new naver.maps.Size(50, 30),
-          anchorSkew: true,
-          anchorColor: "#ffffff",
+          // maxWidth: 140,
+          // backgroundColor: "#ffffff",
+          // borderColor: "#000",
+          // borderWidth: 1,
+          // anchorSize: new naver.maps.Size(50, 30),
+          // anchorSkew: true,
+          // anchorColor: "#ffffff",
           // pixelOffset: new naver.maps.Point(10, -10)
       });
       지역별마커.push(marker);
