--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1509,10 +1509,114 @@
     if (지역별정보윈도우[3].getMap()) {
       지역별정보윈도우[3].close();
     } else {
-      지역별정보윈도우[3].open(koreamap, 지역별마커[2]);
+      지역별정보윈도우[3].open(koreamap, 지역별마커[3]);
     }
   });
 
+  naver.maps.Event.addListener(지역별마커[4], "click", function(e) {
+    if (지역별정보윈도우[4].getMap()) {
+      지역별정보윈도우[4].close();
+    } else {
+      지역별정보윈도우[4].open(koreamap, 지역별마커[4]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[5], "click", function(e) {
+    if (지역별정보윈도우[5].getMap()) {
+      지역별정보윈도우[5].close();
+    } else {
+      지역별정보윈도우[5].open(koreamap, 지역별마커[5]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[6], "click", function(e) {
+    if (지역별정보윈도우[6].getMap()) {
+      지역별정보윈도우[6].close();
+    } else {
+      지역별정보윈도우[6].open(koreamap, 지역별마커[6]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[7], "click", function(e) {
+    if (지역별정보윈도우[7].getMap()) {
+      지역별정보윈도우[7].close();
+    } else {
+      지역별정보윈도우[7].open(koreamap, 지역별마커[7]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[8], "click", function(e) {
+    if (지역별정보윈도우[8].getMap()) {
+      지역별정보윈도우[8].close();
+    } else {
+      지역별정보윈도우[8].open(koreamap, 지역별마커[8]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[9], "click", function(e) {
+    if (지역별정보윈도우[9].getMap()) {
+      지역별정보윈도우[9].close();
+    } else {
+      지역별정보윈도우[9].open(koreamap, 지역별마커[9]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[10], "click", function(e) {
+    if (지역별정보윈도우[10].getMap()) {
+      지역별정보윈도우[10].close();
+    } else {
+      지역별정보윈도우[10].open(koreamap, 지역별마커[10]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[11], "click", function(e) {
+    if (지역별정보윈도우[11].getMap()) {
+      지역별정보윈도우[11].close();
+    } else {
+      지역별정보윈도우[11].open(koreamap, 지역별마커[11]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[12], "click", function(e) {
+    if (지역별정보윈도우[12].getMap()) {
+      지역별정보윈도우[12].close();
+    } else {
+      지역별정보윈도우[12].open(koreamap, 지역별마커[12]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[13], "click", function(e) {
+    if (지역별정보윈도우[13].getMap()) {
+      지역별정보윈도우[13].close();
+    } else {
+      지역별정보윈도우[13].open(koreamap, 지역별마커[13]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[14], "click", function(e) {
+    if (지역별정보윈도우[14].getMap()) {
+      지역별정보윈도우[14].close();
+    } else {
+      지역별정보윈도우[14].open(koreamap, 지역별마커[14]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[15], "click", function(e) {
+    if (지역별정보윈도우[15].getMap()) {
+      지역별정보윈도우[15].close();
+    } else {
+      지역별정보윈도우[15].open(koreamap, 지역별마커[15]);
+    }
+  });
+
+  naver.maps.Event.addListener(지역별마커[16], "click", function(e) {
+    if (지역별정보윈도우[16].getMap()) {
+      지역별정보윈도우[16].close();
+    } else {
+      지역별정보윈도우[16].open(koreamap, 지역별마커[16]);
+    }
+  });
+  
   </script>
 
 
