--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1400,18 +1400,18 @@
   var 지역이름 = ['서울', '인천', '경기', '세종', '대전', '충남', '전북', '광주', '전남', '강원', '충북', '경북', '대구', '경남', '울산', '부산', '제주'];
   var 지역좌표 = [
     [37.5456299, 126.9540667],//서울
-    [37.4647398, 126.5342672],//인천
-    [37.5951951, 125.9748524],//경기
-    [37.5845928, 125.9748356],//세종
+    [37.4568565, 126.1437651],//인천시청
+    [37.2898176, 126.8551155],//경기도청
+    [36.4800984, 125.0478192],//세종시청
     [36.3730795, 127.3185888],//대전
     [36.5360291, 126.2320455],//충남
     [35.7246404, 125.811699], //전북
     [35.1768202, 126.7737603],//광주
     [34.6932579, 125.3769388],//전남
-    [37.8633734, 127.1267051],//강원
+    [37.6696738, 127.8718707],//강원(강원도청)
     [36.6371935, 127.406481],//충북
-    [36.5430631, 127.602632],//경북
-    [35.8798688, 128.4966603],//대구
+    [36.576306, 128.503692],//경북도청
+    [35.8729001, 128.503607],//대구시청
     [35.1786341, 127.2699717],//경남
     [35.5622483, 129.211417],//울산
     [35.1646501, 128.931717],//부산
@@ -1616,7 +1616,7 @@
       지역별정보윈도우[16].open(koreamap, 지역별마커[16]);
     }
   });
-  
+
   </script>
 
 
