--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1399,20 +1399,20 @@
 
   var 지역이름 = ['서울', '인천', '경기', '세종', '대전', '충남', '전북', '광주', '전남', '강원', '충북', '경북', '대구', '경남', '울산', '부산', '제주'];
   var 지역좌표 = [
-    [37.5456299, 126.9540667],//서울
+    [37.5320521, 126.9067213],//서울시청
     [37.4568565, 126.1437651],//인천시청
     [37.2898176, 126.8551155],//경기도청
     [36.4800984, 125.0478192],//세종시청
-    [36.3730795, 127.3185888],//대전
-    [36.5360291, 126.2320455],//충남
-    [35.7246404, 125.811699], //전북
-    [35.1768202, 126.7737603],//광주
-    [34.6932579, 125.3769388],//전남
+    [36.3504567, 127.3826247],//대전시청
+    [36.6588284, 126.1125522],//충남도청
+    [35.7262778, 126.3682001], //전북도청
+    [37.4294077, 127.2529481],//광주시청
+    [34.8162186, 126.4607302],//전남도청
     [37.6696738, 127.8718707],//강원(강원도청)
-    [36.6371935, 127.406481],//충북
+    [36.6358093, 127.4891398],//충북도청
     [36.576306, 128.503692],//경북도청
     [35.8729001, 128.503607],//대구시청
-    [35.1786341, 127.2699717],//경남
+    [35.1802561, 127.8292258],//경남도청
     [35.8715719, 128.0116563],//울산시청
     [35.8689689, 128.0089003],//부산시청
     [33.3617007, 126.511657],//제주
