--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1400,7 +1400,7 @@
   var 지역이름 = ['서울', '인천', '경기', '세종', '대전', '충남', '전북', '광주', '전남', '강원', '충북', '경북', '대구', '경남', '울산', '부산', '제주'];
   var 지역좌표 = [
     [37.5320521, 126.9067213],//서울시청
-    [37.4568565, 126.1437651],//인천시청
+    [37.456445, 126.705873],//인천시청
     [37.2898176, 126.8551155],//경기도청
     [36.4800984, 125.0478192],//세종시청
     [36.3504567, 127.3826247],//대전시청
