--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1399,22 +1399,22 @@
 
   var 지역이름 = ['서울', '인천', '경기', '세종', '대전', '충남', '전북', '광주', '전남', '강원', '충북', '경북', '대구', '경남', '울산', '부산', '제주'];
   var 지역좌표 = [
-    [37.5320521, 126.9067213],//서울시청
+    [37.566418, 126.977950],//서울시청
     [37.456445, 126.705873],//인천시청
-    [37.2898176, 126.8551155],//경기도청
-    [36.4800984, 125.0478192],//세종시청
-    [36.3504567, 127.3826247],//대전시청
-    [36.6588284, 126.1125522],//충남도청
-    [35.7262778, 126.3682001], //전북도청
-    [37.4294077, 127.2529481],//광주시청
-    [34.8162186, 126.4607302],//전남도청
-    [37.6696738, 127.8718707],//강원(강원도청)
-    [36.6358093, 127.4891398],//충북도청
-    [36.576306, 128.503692],//경북도청
-    [35.8729001, 128.503607],//대구시청
-    [35.1802561, 127.8292258],//경남도청
-    [35.8715719, 128.0116563],//울산시청
-    [35.8689689, 128.0089003],//부산시청
+    [37.275221, 127.009382],//경기도청
+    [36.480838, 127.289181],//세종시청
+    [36.350664, 127.384819],//대전시청
+    [36.326828, 127.420840],//충남도청
+    [35.820599, 127.108759], //전북도청
+    [37.429553, 127.255131],//광주시청
+    [34.816351, 126.462924],//전남도청
+    [37.885300, 127.729835],//강원(강원도청)
+    [36.635947, 127.491345],//충북도청
+    [36.574108, 128.509303],//경북도청
+    [35.871468, 128.601757],//대구시청
+    [35.238398, 128.692371],//경남도청
+    [35.539772, 129.311486],//울산시청
+    [35.180152, 129.074980],//부산시청
     [33.3617007, 126.511657],//제주
   ];
   var 지역별확진자 = [
