--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -338,15 +338,15 @@
             </div>
           </div>
 
-          <!-- 발병지도 Chart -->
+          <!-- 국내 확진자 누적 현황 Chart -->
           <div class="row">
 
-            <!-- 국내 발병지도 -->
+            <!-- 국내 확진자 누적 현황 -->
             <div class="col-xl-6 col-lg-6">
               <div class="card shadow mb-12 height-2">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국내 발병 지도</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">국내 확진자 누적 현황(중앙방역대책본부, KBS)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -363,6 +363,8 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div id="koreaMap" style="width:100%;height:40rem;"></div>
+                  <p>업데이트 : 2/25 16:00</p>
+                  <p>출처 : 중앙방역대책본부(특정 시점 지자체별 집계와 다를 수 있음)</p>
                 </div>
               </div>
             </div>
