지역별 현황 반영

--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div id="koreaMap" style="width:100%;height:40rem;"></div>
-                  <p>업데이트 : 2/25 16:00</p>
-                  <p>출처 : 중앙방역대책본부(특정 시점 지자체별 집계와 다를 수 있음)</p>
+                  <p>업데이트 : 2/25 16:00, 출처 : 중앙방역대책본부, KBS(특정 시점 지자체별 집계와 다를 수 있음)</p>
                 </div>
               </div>
             </div>
