--- a/index.html
+++ b/index.html
@@ -701,10 +701,10 @@
               </div>
 
               <!-- 제주지역선별진료소 -->
-              <div class="card shadow mb-12 mt-4">
+              <div id="지역선별진료소" class="card shadow mb-12 mt-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">지역선별진료소</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">지역선별진료소 및 보건소(지도 클릭 후 전화연결 가능)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -720,7 +720,7 @@
                 <!-- Card Body -->
                 <!-- Card Body -->
                 <div class="card-body">
-                  마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다. 타 지역은 업데이트 중에 있습니다.
+                  마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다.
                   <div id="map" style="width:100%;height:400px;"></div>
                   <a
                     href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스
