동선기록 버튼 추가

--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
                   <a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a><br>
                   <a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a><br><br>
 
+                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;"href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a><br>
                   <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;"href="https://news.naver.com/main/factcheck/main.nhn" role="button">신종코로나바이러스 관련 팩트체크</a><br>
                   <a class="btn btn-primary" style="width:100%"href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
 
