안전수칙 업로드

--- a/index.html
+++ b/index.html
@@ -421,21 +421,9 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <p>
-                    1. 손바닥, 손톱 및 꼼꼼하게 손씻기<br>
-                    2. 기침할 땐 옷소매로 가리기<br>
-                    3. 기침 등 호흡기 증상자는 의료기관 방문시 반드시 마스크 착용<br>
-                    4. 의료기관 방문시 의료진에게 해외여행력 알리기<br>
-                    5. 감염병 의심될 땐 질병관리본부 콜센터 1339 상담<br>
-                  </p>
-                  <p>
-                    중국 유행지역 여행시 주의사항<br>
-                    1. 동물 접촉 금지<br>
-                    2. 현지 시장 및 의료기관 방문 자제<br>
-                    3. 발열, 호흡기 증상자 접촉 금지<br>
-                    4. 개인위생 수칙 준수(기침시 마스크 착용, 손씻기 등)<br>
-                    5. 감염병 의심될 땐 질병관리본부 콜센터 1339 상담(귀국후 14일 이내 발열과 호흡기 증상 발생시)<br>
-                  </p>
+                  <img src="img/safe_1.png.jpg" alt="Safe rule1">
+                  <img src="img/safe_2.png.jpg" alt="Safe rule2">
+                  <img src="img/safe_3.png.jpg" alt="Safe rule3">
                   <p>
                     제주특별자치도 신종감염병 대비 보유 인프라 :<br>
                     1. 국가지정 : 제주대학교병원<br>
