안전수칙 이미지 크기 조정

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <img src="img/safe_1.png" alt="Safe rule1">
-                  <img src="img/safe_2.png" alt="Safe rule2">
-                  <img src="img/safe_3.png" alt="Safe rule3">
+                  <img src="img/safe_1.png" alt="Safe rule1" width="350" height="500">
+                  <img src="img/safe_2.png" alt="Safe rule2" width="350" height="500">
+                  <img src="img/safe_3.png" alt="Safe rule3" width="350" height="500">
                   <p>
                     제주특별자치도 신종감염병 대비 보유 인프라 :<br>
                     1. 국가지정 : 제주대학교병원<br>
