--- a/index.html
+++ b/index.html
@@ -1290,9 +1290,11 @@
     var 확진자수 = 0;
     var 사망자수 = 0;
     var 완치자수 = 0;
+    var 한국확진자수 = 0;
     for (var variable in data) {
       if (data[variable]["Name"] == "한국") {
-        document.getElementById("한국확진자").innerHTML = data[variable]["확진자수"];
+        //document.getElementById("한국확진자").innerHTML = data[variable]["확진자수"];
+        한국확진자수 = data[variable]["확진자수"];
       }
       if (data[variable]["Name"] == "제주") {
         document.getElementById("제주확진자").innerHTML = data[variable]["확진자수"];
@@ -1309,7 +1311,7 @@
 
     // 전 세계 완치자 ui 반영
     document.getElementById("확진자수").innerHTML = Number(확진자수).toLocaleString();
-
+    document.getElementById("한국확진자").innerHTML = Number(한국확진자수).toLocaleString();
 
 
   </script>
