Replace RawGit with jsDelivr

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="shortcut icon" href="#">
 
   <title>코로나 맵</title>
-  <link rel='icon' href='img/favicon.png' type='image/x-icon'/ >
-  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link rel='icon' href='img/favicon.png' type='image/x-icon'>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/innks/NanumSquareRound@master/nanumsquareround.min.css">
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157131634-1"></script>
   <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.keys%2CArray.prototype.map%2CArray.prototype.reduce%2Ces2015"></script>
