--- a/index.html
+++ b/index.html
@@ -635,14 +635,14 @@
                 <!-- Card Body -->
                 <!-- Card Body -->
                 <div class="card-body">
-                  마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다.
-                  <div id="map" style="width:100%;height:400px;"></div>
-                  <a
-                    href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스
-                    제주지역 선별진료소(카카오맵 연동)</a>
-                  <p style="margin-top:1rem">
-                    <a class="btn btn-primary" data-toggle="collapse" href="#제주보건지소" role="button" aria-expanded="true" aria-controls="진료소1">제주 보건지소현황</a>
-                  </p>
+                  <div id="map" style="width:100%;height:600px;"></div>
+
+                  <a class="btn btn-primary" style="width:100%; margin:0.3rem;" href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY" role="button">카카오맵 연동</a>
+
+                  <a class="btn btn-primary" style="width:100%; margin:0.3rem;" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">맵 크게보기</a>
+
+                  <a class="btn btn-primary" style="width:100%; margin:0.3rem;" data-toggle="collapse" href="#제주보건지소" role="button" aria-expanded="true" aria-controls="진료소1">제주 보건지소현황</a>
+
                   <div class="card card-body collapse multi-collapse" id="제주보건지소">
                         <b>
                           <u>제주시</u>
