안전수칙 이미지 태그 수정

--- a/index_layout.html
+++ b/index_layout.html
@@ -440,9 +440,9 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <a href="img/safe_1.png" target="_blank"><img src="img/safe_1.png" alt="Safe rule1" class="img-fluid" /></a>
-                  <a href="img/safe_2.png" target="_blank"><img src="img/safe_2.png" alt="Safe rule2" class="img-fluid" /></a>
-                  <a href="img/safe_3.png" target="_blank"><img src="img/safe_3.png" alt="Safe rule3" class="img-fluid" /></a>
+                  <a href="img/safe_1.png" class="block" target="_blank"><img src="img/safe_1.png" alt="Safe rule1" /></a>
+                  <a href="img/safe_2.png" class="block" target="_blank"><img src="img/safe_2.png" alt="Safe rule2" /></a>
+                  <a href="img/safe_3.png" class="block" target="_blank"><img src="img/safe_3.png" alt="Safe rule3" /></a>
                   <h5 class="mt-3">제주특별자치도 신종감염병 대비 보유 인프라</h5>
                   <ol>
                     <li>국가지정 : 제주대학교병원</li>
