--- a/index_layout.html
+++ b/index_layout.html
@@ -389,7 +389,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div id="koreaMap" style="width:100%;height:40rem;"></div>
+                  <div id="koreaMap" style="width:100%;height:446px;"></div>
                   <div class="update mt-2"><span class="title">업데이트</span><span class="desc">2/26 17:00</span></div>
                   <div class="source mt-2"><span class="title">출처</span><span class="desc">중앙방역대책본부, KBS(특정 시점 지자체별 집계와 다를 수 있음)</span></div>
                 </div>
